# experiment_tracker

./: .gitignore  .replit  AGENTS.md  README.md  design_guidelines.md  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  run_backend.py  start_all.sh  start_dev.js
python/backend/: .env.example  README.md  pyproject.toml
python/backend/alembic/: env.py
python/backend/alembic/versions/: 20260218_01_metric_label_and_db_metadata.py  dea9cb85cdf3_add_experiment_tags.py
python/backend/src/: models.py
python/backend/src/api/: main.py
python/backend/src/api/routes/: api.py  auth.py  projects.py  service_dependencies.py  temp.py
python/backend/src/config/: settings.py
python/backend/src/db/: database.py  session.py  utils.py
python/backend/src/domain/api_tokens/: __init__.py  controller.py  dto.py  error.py  mapper.py  repository.py  service.py
python/backend/src/domain/experiments/: controller.py  dto.py  error.py  mapper.py  repository.py  service.py  utils.py
python/backend/src/domain/hypotheses/: controller.py  dto.py  error.py  mapper.py  repository.py  service.py
python/backend/src/domain/metrics/: controller.py  dto.py  error.py  mapper.py  repository.py  service.py
python/backend/src/domain/object_storage/: __init__.py  client.py  controller.py  dto.py
python/backend/src/domain/overview/: dto.py
python/backend/src/domain/projects/: controller.py  dto.py  errors.py  mapper.py  repository.py  rights.py  service.py  utils.py
python/backend/src/domain/rbac/: dto.py  error.py  repository.py  service.py  wrapper.py
python/backend/src/domain/scalars/: __init__.py  client.py  controller.py  dependencies.py  dto.py  error.py  service.py
python/backend/src/domain/team/: errors.py  utils.py
python/backend/src/domain/utils/: project_based_service.py  project_dependency.py
python/backend/src/lib/: dto_config.py  dto_converter.py  types.py
python/backend/src/lib/db/: base_repository.py  error.py
python/backend/src/lib/protocols/: user_protocol.py
python/backend/tests/: conftest.py  test_metrics_repository.py  test_teams_repository.py
python/backend/tests/domain/api_tokens/: test_controller.py  test_dto.py  test_mapper.py  test_repository.py  test_service.py
python/backend/tests/domain/experiments/: test_controller.py  test_dto.py  test_mapper.py  test_repository.py  test_service.py  test_utils.py
python/backend/tests/domain/hypotheses/: test_controller.py  test_dto.py  test_mapper.py  test_repository.py  test_service.py
python/backend/tests/domain/metrics/: test_controller.py  test_dto.py  test_mapper.py  test_repository.py  test_service.py
python/backend/tests/domain/projects/: test_controller.py  test_dashboard_controller.py  test_dashboard_service.py  test_dto.py  test_repository.py  test_service.py
python/backend/tests/domain/rbac/: test_permissions.py  test_repository.py  test_service.py  test_strategies.py  test_wrapper.py
python/backend/tests/dto/: test_experiment_dto.py  test_project_dto.py
python/backend/tests/repository/: test_experiments_repository.py  test_hypotheses_repository.py  test_metrics_repository.py  test_projects_repository.py  test_teams_repository.py
python/backend/tests/service/: test_experiments_service.py  test_projects_service.py
python/object_storage/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  TECH_TASK.md  docker-compose.yml  pyproject.toml
python/object_storage/src/object_storage/: __init__.py  config.py  main.py
python/scalars_service/: .env.example  .gitignore  README.md  pyproject.toml
python/scalars_service/src/: config.py
python/scalars_service/src/api/: cache.py  main.py  routes.py
python/scalars_service/src/app/domain/: models.py
python/scalars_service/src/db/: clickhouse.py  questdb.py  redis.py  utils.py
python/scalars_service/tests/utils/: test_pattern_matcher.py  test_scalars_utils.py
python/sdk/: .gitignore  README.md  pyproject.toml
python/sdk/src/experiment_tracker_sdk/: __init__.py  cli.py  client.py  config.py  error.py  exp_tracker.py  logger.py  models.py  queue.py  utils.py
python/sdk/tests/: test_config.py  test_queue.py
(+288 files in other folders)
