[project]
name = "experiment-tracker-backend"
version = "0.1.0"
description = "MVP backend-first experiment tracker"
authors = [{ name = "Experiment Tracker Team" }]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "fastapi-users[sqlalchemy]>=15.0.3",
  "asyncpg>=0.31.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "aiosqlite>=0.20.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "msgpack>=1.0.8",
  "rich>=13.7.1",
  "advanced-alchemy>=1.8.2",
  "python-multipart>=0.0.9",
  "alembic>=1.18.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "api.*",
    "config.*",
    "db.*",
]
ignore_missing_imports = false
